--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.9.3",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.1"
   },
   "devDependencies": {
